# lib/routes/post.js
@@ -129,55 +129,6 @@ var post = function (router) {
         });
     }); });
     router
-        .route("/verify")
-        .post(VerifyToken_1.default, function (req, res) { return __awaiter(_this, void 0, void 0, function () {
-        var body, code, user, decoded, _1;
-        return __generator(this, function (_a) {
-            switch (_a.label) {
-                case 0:
-                    body = req.body;
-                    code = body.code;
-                    return [4 /*yield*/, model.getUser({ confirmation_code: code })];
-                case 1:
-                    user = _a.sent();
-                    _a.label = 2;
-                case 2:
-                    _a.trys.push([2, 4, , 5]);
-                    return [4 /*yield*/, jsonwebtoken_1.default.verify(user.confirmation_token, process.env.API_SECRET)];
-                case 3:
-                    decoded = _a.sent();
-                    return [3 /*break*/, 5];
-                case 4:
-                    _1 = _a.sent();
-                    return [2 /*return*/, res
-                            .status(resultCodes.syntaxError)
-                            .send(errorMessages.invalidCode)];
-                case 5:
-                    if (!user ||
-                        user.confirmation_code !== code ||
-                        decoded.confirmation_code !== code)
-                        return [2 /*return*/, res
-                                .status(resultCodes.syntaxError)
-                                .send(errorMessages.invalidCode)];
-                    return [4 /*yield*/, user_1.default.updateOne({ email: user.email }, { confirmation_token: "", confirmation_code: "" })];
-                case 6:
-                    _a.sent();
-                    res.status(resultCodes.success).json({
-                        id: test_1.decrypt(user.id || "", req.userId),
-                        name: test_1.decrypt(user.name || "", req.userId),
-                        fname: test_1.decrypt(user.fname || "", req.userId),
-                        email: test_1.decrypt(user.email || "", req.userId),
-                        remoteDay: user.remoteDay,
-                        photo: user.photo,
-                        start_date: user.start_date,
-                        end_date: user.end_date,
-                        historical: user.historical
-                    });
-                    return [2 /*return*/];
-            }
-        });
-    }); });
-    router
         .route("/user/complete")
         .post(VerifyToken_1.default, function (req, res) { return __awaiter(_this, void 0, void 0, function () {
         var body, id, name, fname, email, existingUser, user;
@@ -224,6 +175,153 @@ var post = function (router) {
                     return [4 /*yield*/, model.getUserById(id)];
                 case 7:
                     user = _a.sent();
+                    res.status(resultCodes.success).json({
+                        id: test_1.decrypt(user.id || "", req.userId),
+                        name: test_1.decrypt(user.name || "", req.userId),
+                        fname: test_1.decrypt(user.fname || "", req.userId),
+                        email: test_1.decrypt(user.email || "", req.userId),
+                        remoteDay: user.remoteDay,
+                        photo: user.photo,
+                        start_date: user.start_date,
+                        end_date: user.end_date,
+                        historical: user.historical
+                    });
+                    return [2 /*return*/];
+            }
+        });
+    }); });
+    /**
+     * This route is used to add a friend.
+     */
+    router
+        .route("/users/add")
+        .post(VerifyToken_1.default, function (req, res) {
+        var body = req.body;
+        RES = res;
+        var id_user = test_1.encrypt(body.id_user, req.userId);
+        console.log(id_user);
+        user_1.default.findOne({ id: id_user }, null, { sort: { _id: -1 } }, function (err, user) {
+            if (err)
+                RES.status(resultCodes.syntaxError).send(errorMessages.userFind);
+            else if (user) {
+                user.friend = ramda_1.append({
+                    id: body.id,
+                    name: test_1.encrypt(body.name, req.userId),
+                    fname: test_1.encrypt(body.fname, req.userId),
+                    id_place: body.id_place,
+                    photo: body.photo
+                }, user.friend);
+                user.save(function (err) {
+                    if (err)
+                        RES.status(resultCodes.serverError).send(errorMessages.userUpdate);
+                    RES.status(resultCodes.success).send({ user: user });
+                });
+            }
+        });
+    });
+    /**
+     * This route is used to remove a friend.
+     */
+    router
+        .route("/users/remove")
+        .post(VerifyToken_1.default, function (req, res) {
+        var body = req.body;
+        RES = res;
+        var id_user = test_1.encrypt(body.id_user, req.userId);
+        user_1.default.findOne({ id: id_user }, null, { sort: { _id: -1 } }, function (err, user) {
+            if (err)
+                RES.status(resultCodes.syntaxError).send(errorMessages.userFind);
+            else if (user) {
+                var isRemovedUser = function (userFriend) { return userFriend.id !== body.id; };
+                user.friend = ramda_1.filter(isRemovedUser, user.friend);
+                user.save(function (err) {
+                    if (err)
+                        RES.status(resultCodes.serverError).send(errorMessages.userUpdate);
+                    RES.status(resultCodes.success).send({ user: user });
+                });
+            }
+        });
+    });
+    router
+        .route("/user/remove")
+        .post(VerifyToken_1.default, function (req, res) { return __awaiter(_this, void 0, void 0, function () {
+        var body, name, fname, user, err_1;
+        return __generator(this, function (_a) {
+            switch (_a.label) {
+                case 0:
+                    body = req.body;
+                    name = test_1.encrypt(body.name, req.userId);
+                    fname = test_1.encrypt(body.fname, req.userId);
+                    _a.label = 1;
+                case 1:
+                    _a.trys.push([1, 4, , 5]);
+                    return [4 /*yield*/, model.getUser({ name: name, fname: fname })];
+                case 2:
+                    user = _a.sent();
+                    return [4 /*yield*/, model.removeUserById(user.id)];
+                case 3:
+                    _a.sent();
+                    res.status(resultCodes.success).send({ success: "success" });
+                    return [3 /*break*/, 5];
+                case 4:
+                    err_1 = _a.sent();
+                    console.log(err_1);
+                    res.status(resultCodes.serverError).send(err_1);
+                    return [3 /*break*/, 5];
+                case 5: return [2 /*return*/];
+            }
+        });
+    }); });
+    router
+        .route("/user/settings")
+        .post(VerifyToken_1.default, function (req, res) {
+        var body = req.body;
+        var id_user = test_1.encrypt(body.id_user, req.userId);
+        if (body.photo &&
+            body.photo.match(HTTPS_REGEX) === null &&
+            (body.photo !== "" || body.photo !== null))
+            model.updatePhoto(id_user, body.photo);
+        if (body.remoteDay !== "")
+            model.updateUser(id_user, { remoteDay: body.remoteDay });
+        if (body.startDate && body.endDate) {
+            model.updateAvailabilityPeriod(id_user, moment_1.default(body.startDate, "DD/MM/YYYY").toDate(), moment_1.default(body.endDate, "DD/MM/YYYY").toDate());
+        }
+        res.status(resultCodes.success).send({ success: "success" });
+    });
+    router
+        .route("/verify")
+        .post(VerifyToken_1.default, function (req, res) { return __awaiter(_this, void 0, void 0, function () {
+        var body, code, user, decoded, _1;
+        return __generator(this, function (_a) {
+            switch (_a.label) {
+                case 0:
+                    body = req.body;
+                    code = body.code;
+                    return [4 /*yield*/, model.getUser({ confirmation_code: code })];
+                case 1:
+                    user = _a.sent();
+                    _a.label = 2;
+                case 2:
+                    _a.trys.push([2, 4, , 5]);
+                    return [4 /*yield*/, jsonwebtoken_1.default.verify(user.confirmation_token, process.env.API_SECRET)];
+                case 3:
+                    decoded = _a.sent();
+                    return [3 /*break*/, 5];
+                case 4:
+                    _1 = _a.sent();
+                    return [2 /*return*/, res
+                            .status(resultCodes.syntaxError)
+                            .send(errorMessages.invalidCode)];
+                case 5:
+                    if (!user ||
+                        user.confirmation_code !== code ||
+                        decoded.confirmation_code !== code)
+                        return [2 /*return*/, res
+                                .status(resultCodes.syntaxError)
+                                .send(errorMessages.invalidCode)];
+                    return [4 /*yield*/, user_1.default.updateOne({ email: user.email }, { confirmation_token: "", confirmation_code: "" })];
+                case 6:
+                    _a.sent();
                     res.status(resultCodes.success).json({
                         id: test_1.decrypt(user.id || "", req.userId),
                         name: test_1.decrypt(user.name || "", req.userId),
@@ -363,74 +461,6 @@ var post = function (router) {
             }
         });
     }); });
-    /**
-     * This route is used to add a friend.
-     */
-    router
-        .route("/users/add")
-        .post(VerifyToken_1.default, function (req, res) {
-        var body = req.body;
-        RES = res;
-        var id_user = test_1.encrypt(body.id_user, req.userId);
-        console.log(id_user);
-        user_1.default.findOne({ id: id_user }, null, { sort: { _id: -1 } }, function (err, user) {
-            if (err)
-                RES.status(resultCodes.syntaxError).send(errorMessages.userFind);
-            else if (user) {
-                user.friend = ramda_1.append({
-                    id: body.id,
-                    name: test_1.encrypt(body.name, req.userId),
-                    fname: test_1.encrypt(body.fname, req.userId),
-                    id_place: body.id_place,
-                    photo: body.photo
-                }, user.friend);
-                user.save(function (err) {
-                    if (err)
-                        RES.status(resultCodes.serverError).send(errorMessages.userUpdate);
-                    RES.status(resultCodes.success).send({ user: user });
-                });
-            }
-        });
-    });
-    /**
-     * This route is used to remove a friend.
-     */
-    router
-        .route("/users/remove")
-        .post(VerifyToken_1.default, function (req, res) {
-        var body = req.body;
-        RES = res;
-        var id_user = test_1.encrypt(body.id_user, req.userId);
-        user_1.default.findOne({ id: id_user }, null, { sort: { _id: -1 } }, function (err, user) {
-            if (err)
-                RES.status(resultCodes.syntaxError).send(errorMessages.userFind);
-            else if (user) {
-                var isRemovedUser = function (userFriend) { return userFriend.id !== body.id; };
-                user.friend = ramda_1.filter(isRemovedUser, user.friend);
-                user.save(function (err) {
-                    if (err)
-                        RES.status(resultCodes.serverError).send(errorMessages.userUpdate);
-                    RES.status(resultCodes.success).send({ user: user });
-                });
-            }
-        });
-    });
-    router
-        .route("/user/settings")
-        .post(VerifyToken_1.default, function (req, res) {
-        var body = req.body;
-        var id_user = test_1.encrypt(body.id_user, req.userId);
-        if (body.photo &&
-            body.photo.match(HTTPS_REGEX) === null &&
-            (body.photo !== "" || body.photo !== null))
-            model.updatePhoto(id_user, body.photo);
-        if (body.remoteDay !== "")
-            model.updateUser(id_user, { remoteDay: body.remoteDay });
-        if (body.startDate && body.endDate) {
-            model.updateAvailabilityPeriod(id_user, moment_1.default(body.startDate, "DD/MM/YYYY").toDate(), moment_1.default(body.endDate, "DD/MM/YYYY").toDate());
-        }
-        res.status(resultCodes.success).send({ success: "success" });
-    });
     router
         .route("/place/assign")
         .post(VerifyToken_1.default, function (req, res) {
@@ -444,36 +474,6 @@ var post = function (router) {
         });
         res.status(resultCodes.success).send({ success: "success" });
     });
-    router
-        .route("/user/remove")
-        .post(VerifyToken_1.default, function (req, res) { return __awaiter(_this, void 0, void 0, function () {
-        var body, name, fname, user, err_1;
-        return __generator(this, function (_a) {
-            switch (_a.label) {
-                case 0:
-                    body = req.body;
-                    name = test_1.encrypt(body.name, req.userId);
-                    fname = test_1.encrypt(body.fname, req.userId);
-                    _a.label = 1;
-                case 1:
-                    _a.trys.push([1, 4, , 5]);
-                    return [4 /*yield*/, model.getUser({ name: name, fname: fname })];
-                case 2:
-                    user = _a.sent();
-                    return [4 /*yield*/, model.removeUserById(user.id)];
-                case 3:
-                    _a.sent();
-                    res.status(resultCodes.success).send({ success: "success" });
-                    return [3 /*break*/, 5];
-                case 4:
-                    err_1 = _a.sent();
-                    console.log(err_1);
-                    res.status(resultCodes.serverError).send(err_1);
-                    return [3 /*break*/, 5];
-                case 5: return [2 /*return*/];
-            }
-        });
-    }); });
     router
         .route("/place/unassign")
         .post(VerifyToken_1.default, function (req, res) {
